Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18562

[ERROR] InnoDB: WSREP: referenced FK check fail: Lock wait index

    XMLWordPrintable

Details

    Description

      Hello.

      we are occasionally receiving error:

      [ERROR] InnoDB: WSREP: referenced FK check fail: Lock wait index `PRIMARY` table `schema`.`child_table`;
      

      What could be the cause for such error?
      Is there any way to trace this issue?

      Thanks for answer.

      Regards,
      Marko

      Attachments

        Issue Links

          Activity

            People

              jplindst Jan Lindström (Inactive)
              Sutic Marko Sutic
              Votes:
              2 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 1d
                  1d

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.